target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'main'", "'int'", 
                     "'float'", "'void'", "'boolean'", "'class'", "'final'", 
                     "'static'", "'break'", "'continue'", "'do'", "'else'", 
                     "'extends'", "'if'", "'new'", "'string'", "'then'", 
                     "'for'", "'return'", "'true'", "'false'", "'nil'", 
                     "'this'", "'to'", "'downto'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", 
                     "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", 
                     "':='", "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", 
                     "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMENT", "LINE_COMMENT", 
                      "STRINGMT", "INTMT", "FLOATMT", "BOOLMT", "MAIN_LIT", 
                      "INT_LIT", "FLOAT_LIT", "VOID_LIT", "BOOL_LIT", "CLASS_LIT", 
                      "FINAL_LIT", "STATIC_LIT", "BREAK_LIT", "CONT_LIT", 
                      "DO_LIT", "ELSE_LIT", "EXTEND_LIT", "IF_LIT", "NEW_LIT", 
                      "STRING_LIT", "THEN_LIT", "FOR_LIT", "RETURN_LIT", 
                      "TRUE_LIT", "FALSE_LIT", "NIL_LIT", "THIS_LIT", "TO_LIT", 
                      "DOWNTO_LIT", "ID", "ADD_OP", "SUB_OP", "MUL_OP", 
                      "FLOAT_DIV_OP", "INT_DIV_OP", "MOD_OP", "NEQUA_OP", 
                      "ISEQUA_OP", "LESS_OP", "GREAT_OP", "LEQUA_OP", "GEQUA_OP", 
                      "OR_OP", "AND_OP", "NOT_OP", "CONCAT_OP", "ASSIGN_OP", 
                      "LSB", "RSB", "LCB", "RCB", "LB", "RB", "SEMI", "COLON", 
                      "DOT", "COMMA", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decl_lst = 1
    RULE_class_decl = 2
    RULE_decl_lst = 3
    RULE_vm_decl = 4
    RULE_array_decl = 5
    RULE_array_type = 6
    RULE_array_lst = 7
    RULE_array_assign = 8
    RULE_array_value = 9
    RULE_array_val = 10
    RULE_var_decl = 11
    RULE_var_decl_pre = 12
    RULE_vdecl_type = 13
    RULE_var_lst = 14
    RULE_var_assign = 15
    RULE_method_decl = 16
    RULE_method_decl_pre = 17
    RULE_para_lst = 18
    RULE_para_decl = 19
    RULE_id_lst = 20
    RULE_mdecl_type = 21
    RULE_expr = 22
    RULE_expr1 = 23
    RULE_expr2 = 24
    RULE_expr3 = 25
    RULE_expr4 = 26
    RULE_expr5 = 27
    RULE_expr6 = 28
    RULE_expr7 = 29
    RULE_expr8 = 30
    RULE_expr9 = 31
    RULE_expr10 = 32
    RULE_expr11 = 33
    RULE_expr_lst = 34
    RULE_block_statement = 35
    RULE_block_decl_lst = 36
    RULE_block_decl = 37
    RULE_statement_lst = 38
    RULE_var_decl_2 = 39
    RULE_array_decl_2 = 40
    RULE_statement = 41
    RULE_assign_statement = 42
    RULE_var_name = 43
    RULE_if_statement = 44
    RULE_else_state = 45
    RULE_for_statement = 46
    RULE_break_statement = 47
    RULE_continue_statement = 48
    RULE_return_statement = 49
    RULE_methodcall_statement = 50

    ruleNames =  [ "program", "class_decl_lst", "class_decl", "decl_lst", 
                   "vm_decl", "array_decl", "array_type", "array_lst", "array_assign", 
                   "array_value", "array_val", "var_decl", "var_decl_pre", 
                   "vdecl_type", "var_lst", "var_assign", "method_decl", 
                   "method_decl_pre", "para_lst", "para_decl", "id_lst", 
                   "mdecl_type", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "expr9", "expr10", 
                   "expr11", "expr_lst", "block_statement", "block_decl_lst", 
                   "block_decl", "statement_lst", "var_decl_2", "array_decl_2", 
                   "statement", "assign_statement", "var_name", "if_statement", 
                   "else_state", "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "methodcall_statement" ]

    EOF = Token.EOF
    T__0=1
    COMMENT=2
    LINE_COMMENT=3
    STRINGMT=4
    INTMT=5
    FLOATMT=6
    BOOLMT=7
    MAIN_LIT=8
    INT_LIT=9
    FLOAT_LIT=10
    VOID_LIT=11
    BOOL_LIT=12
    CLASS_LIT=13
    FINAL_LIT=14
    STATIC_LIT=15
    BREAK_LIT=16
    CONT_LIT=17
    DO_LIT=18
    ELSE_LIT=19
    EXTEND_LIT=20
    IF_LIT=21
    NEW_LIT=22
    STRING_LIT=23
    THEN_LIT=24
    FOR_LIT=25
    RETURN_LIT=26
    TRUE_LIT=27
    FALSE_LIT=28
    NIL_LIT=29
    THIS_LIT=30
    TO_LIT=31
    DOWNTO_LIT=32
    ID=33
    ADD_OP=34
    SUB_OP=35
    MUL_OP=36
    FLOAT_DIV_OP=37
    INT_DIV_OP=38
    MOD_OP=39
    NEQUA_OP=40
    ISEQUA_OP=41
    LESS_OP=42
    GREAT_OP=43
    LEQUA_OP=44
    GEQUA_OP=45
    OR_OP=46
    AND_OP=47
    NOT_OP=48
    CONCAT_OP=49
    ASSIGN_OP=50
    LSB=51
    RSB=52
    LCB=53
    RCB=54
    LB=55
    RB=56
    SEMI=57
    COLON=58
    DOT=59
    COMMA=60
    WS=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Class_decl_lstContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.class_decl_lst()
            self.state = 103
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_decl_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Class_declContext,0)


        def class_decl_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Class_decl_lstContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl_lst" ):
                return visitor.visitClass_decl_lst(self)
            else:
                return visitor.visitChildren(self)




    def class_decl_lst(self):

        localctx = BKOOLParser.Class_decl_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl_lst)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.class_decl()
                self.state = 106
                self.class_decl_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.class_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_LIT(self):
            return self.getToken(BKOOLParser.CLASS_LIT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LCB(self):
            return self.getToken(BKOOLParser.LCB, 0)

        def decl_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Decl_lstContext,0)


        def RCB(self):
            return self.getToken(BKOOLParser.RCB, 0)

        def EXTEND_LIT(self):
            return self.getToken(BKOOLParser.EXTEND_LIT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = BKOOLParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(BKOOLParser.CLASS_LIT)
            self.state = 112
            self.match(BKOOLParser.ID)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTEND_LIT:
                self.state = 113
                self.match(BKOOLParser.EXTEND_LIT)
                self.state = 114
                self.match(BKOOLParser.ID)


            self.state = 117
            self.match(BKOOLParser.LCB)
            self.state = 118
            self.decl_lst()
            self.state = 119
            self.match(BKOOLParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vm_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Vm_declContext,0)


        def decl_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Decl_lstContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_lst" ):
                return visitor.visitDecl_lst(self)
            else:
                return visitor.visitChildren(self)




    def decl_lst(self):

        localctx = BKOOLParser.Decl_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl_lst)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.MAIN_LIT, BKOOLParser.INT_LIT, BKOOLParser.FLOAT_LIT, BKOOLParser.VOID_LIT, BKOOLParser.BOOL_LIT, BKOOLParser.FINAL_LIT, BKOOLParser.STATIC_LIT, BKOOLParser.STRING_LIT, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.vm_decl()
                self.state = 122
                self.decl_lst()
                pass
            elif token in [BKOOLParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vm_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Var_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Method_declContext,0)


        def array_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Array_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_vm_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVm_decl" ):
                return visitor.visitVm_decl(self)
            else:
                return visitor.visitChildren(self)




    def vm_decl(self):

        localctx = BKOOLParser.Vm_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vm_decl)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.method_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.array_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_pre(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_preContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def array_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Array_lstContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_array_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_decl" ):
                return visitor.visitArray_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_decl(self):

        localctx = BKOOLParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.var_decl_pre()
            self.state = 133
            self.array_type()
            self.state = 134
            self.array_lst()
            self.state = 135
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vdecl_type(self):
            return self.getTypedRuleContext(BKOOLParser.Vdecl_typeContext,0)


        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def INTMT(self):
            return self.getToken(BKOOLParser.INTMT, 0)

        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = BKOOLParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.vdecl_type()
            self.state = 138
            self.match(BKOOLParser.LSB)
            self.state = 139
            self.match(BKOOLParser.INTMT)
            self.state = 140
            self.match(BKOOLParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_assign(self):
            return self.getTypedRuleContext(BKOOLParser.Array_assignContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def array_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Array_lstContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array_lst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_lst" ):
                return visitor.visitArray_lst(self)
            else:
                return visitor.visitChildren(self)




    def array_lst(self):

        localctx = BKOOLParser.Array_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_lst)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.array_assign()
                self.state = 143
                self.match(BKOOLParser.COMMA)
                self.state = 144
                self.array_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.array_assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LCB(self):
            return self.getToken(BKOOLParser.LCB, 0)

        def array_value(self):
            return self.getTypedRuleContext(BKOOLParser.Array_valueContext,0)


        def RCB(self):
            return self.getToken(BKOOLParser.RCB, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_assign" ):
                return visitor.visitArray_assign(self)
            else:
                return visitor.visitChildren(self)




    def array_assign(self):

        localctx = BKOOLParser.Array_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_assign)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(BKOOLParser.ID)
                self.state = 150
                self.match(BKOOLParser.T__0)
                self.state = 151
                self.match(BKOOLParser.LCB)
                self.state = 152
                self.array_value()
                self.state = 153
                self.match(BKOOLParser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.match(BKOOLParser.ID)
                self.state = 157
                self.match(BKOOLParser.T__0)
                self.state = 158
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_val(self):
            return self.getTypedRuleContext(BKOOLParser.Array_valContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def array_value(self):
            return self.getTypedRuleContext(BKOOLParser.Array_valueContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_value" ):
                return visitor.visitArray_value(self)
            else:
                return visitor.visitChildren(self)




    def array_value(self):

        localctx = BKOOLParser.Array_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_value)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.array_val()
                self.state = 162
                self.match(BKOOLParser.COMMA)
                self.state = 163
                self.array_value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.array_val()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_valContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLMT(self):
            return self.getToken(BKOOLParser.BOOLMT, 0)

        def STRINGMT(self):
            return self.getToken(BKOOLParser.STRINGMT, 0)

        def INTMT(self):
            return self.getToken(BKOOLParser.INTMT, 0)

        def FLOATMT(self):
            return self.getToken(BKOOLParser.FLOATMT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_array_val

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_val" ):
                return visitor.visitArray_val(self)
            else:
                return visitor.visitChildren(self)




    def array_val(self):

        localctx = BKOOLParser.Array_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_val)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.STRINGMT) | (1 << BKOOLParser.INTMT) | (1 << BKOOLParser.FLOATMT) | (1 << BKOOLParser.BOOLMT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_pre(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_preContext,0)


        def vdecl_type(self):
            return self.getTypedRuleContext(BKOOLParser.Vdecl_typeContext,0)


        def var_lst(self):
            return self.getTypedRuleContext(BKOOLParser.Var_lstContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BKOOLParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.var_decl_pre()
            self.state = 171
            self.vdecl_type()
            self.state = 172
            self.var_lst()
            self.state = 173
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_preContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL_LIT(self):
            return self.getToken(BKOOLParser.FINAL_LIT, 0)

        def STATIC_LIT(self):
            return self.getToken(BKOOLParser.STATIC_LIT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_var_decl_pre

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_pre" ):
                return visitor.visitVar_decl_pre(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_pre(self):

        localctx = BKOOLParser.Var_decl_preContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_decl_pre)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(BKOOLParser.FINAL_LIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(BKOOLParser.STATIC_LIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(BKOOLParser.FINAL_LIT)
                self.state = 178
                self.match(BKOOLParser.STATIC_LIT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.match(BKOOLParser.STATIC_LIT)
                self.state = 180
                self.match(BKOOLParser.FINAL_LIT)
                pass
